--- a/src/styles/pages/landing.css
+++ b/src/styles/pages/landing.css
@@ -1,7 +1,7 @@
 #page-landing {
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(329.54deg, #2986d1 8%, #88c7c7 100%);
+  background: linear-gradient(329.54deg, #29b6d1 8%, #00c7c7 100%);
 
   display: flex;
   justify-content: center;
@@ -21,6 +21,8 @@
   align-items: flex-start;
   flex-direction: column;
   justify-content: space-between;
+
+  background: url("../../images/landing.svg") no-repeat 80% center;
 }
 
 #page-landing .content-wrapper main {
@@ -43,10 +45,37 @@
   position: absolute;
   right: 0;
   top: 0;
+
+  font-size: 24px;
+  line-height: 34px;
+
+  display: flex;
+  flex-direction: column;
+
+  text-align: right;
+}
+
+.content-wrapper .location strong {
+  font-weight: 800;
 }
 
 .content-wrapper .enter-app {
   position: absolute;
   right: 0;
   bottom: 0;
+
+  width: 80px;
+  height: 80px;
+  background: #ffd666;
+  border-radius: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color 0.2s;
+}
+
+.content-wrapper .enter-app:hover {
+  background: #96feff;
 }
